# graphics-programming-exercises

./: .gitmodules  CMakeLists.txt  README.md
assignments/: rendering_pipeline.html  weather_effects.html
assignments/voronoi/: CMakeLists.txt  distance.frag  distance_color.frag  main.cpp  shader.vert
exercises/: exercise_1.html  exercise_4.html  exercise_6.html  exercise_7.html
exercises/exercise_1/exercise_1_1_and_1_2/: main.cpp
exercises/exercise_1/exercise_1_3/: main.cpp
exercises/exercise_1/exercise_1_4/: main.cpp
exercises/exercise_1/exercise_1_5/: main.cpp
exercises/exercise_1/exercise_1_6/: main.cpp
exercises/exercise_1/exercise_1_7/: main.cpp
exercises/exercise_1/exercise_1_8/: main.cpp
exercises/exercise_1/exercise_1_9/: main.cpp
exercises/exercise_1_solutions/exercise_1_1_and_1_2_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_3_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_4_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_5_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_6_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_7_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_8_sol/: main.cpp
exercises/exercise_1_solutions/exercise_1_9_sol/: main.cpp
exercises/exercise_2/exercise_2_1/: main.cpp  shader.frag  shader.vert  shader_s.h
exercises/exercise_2/exercise_2_2_to_2_7/: main.cpp  shader.frag  shader.vert
exercises/exercise_2_solutions/exercise_2_1_sol/: main.cpp
exercises/exercise_6_solutions/exercise_6_1_sol/: CMakeLists.txt  main.cpp
(+47 files in other folders)
